# FunctionalHomologyWorkshop

./: .gitignore  LICENSE  README.md  casf_clustering.tsv  casf_ids.json  create_graph.py  requirements.txt
.github/workflows/: project3_test.yaml
project1/: analyze_dataleakage.py  filter_dataleakage.py  instructions.md
project2/: calculate_similarity.py  identify_clusters.py  identify_dataleakage.py  instructions.md
project3/: README.md  affinities.npy  config.toml  create_graph.py  env.yml  instructions.md  main.py  make_lookup_predictions.py  pyproject.toml  requirements.txt  test_train_mask.npy
project3/src/fhw_p3/: create_graph.py  main.py  make_lookup_predictions.py
project3/src/fhw_p3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
project3/src/fhw_p3/fhw_p3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
